styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */


/* fallback font for Proxima Nova */
@font-face {
  font-family: proxima-nova-fallback;
  font-weight: 400;
  font-style: normal;
  size-adjust: 97.629%;
  src: local("Arial");
}
@font-face {
  font-family: proxima-nova-fallback;
  font-weight: 700;
  font-style: normal;
  size-adjust: 101.341%;
  src: local("Arial");
}
@font-face {
  font-family: proxima-nova-fallback;
  font-weight: 600;
  font-style: normal;
  size-adjust: 99.75%;
  src: local("Arial");
}

:root {
  /* colors */
  --link-color: #ad0021;
  --link-hover-color: #fff;
  --background-color: #fff;
  --highlight-background-color: #f5f5f5;
  --text-color: #585857;
  --heading-color: #333;

  /* fonts */
  --body-font-family: 'Proxima Nova', proxima-nova-fallback, sans-serif;
  --heading-font-family: var(--body-font-family);

  /* body sizes */
  --body-font-size-m: 1rem;

  /* heading sizes */
  --heading-font-size-xxl: 2rem;
  --heading-font-size-xl: 1.5rem;
  --heading-font-size-l: 1rem;

  /* nav height */
  --nav-height: 64px;

  /* customer styles */
  --bs-blue: #0d6efd;
  --bs-indigo: #6610f2;
  --bs-purple: #6f42c1;
  --bs-pink: #d63384;
  --bs-red: #dc3545;
  --bs-orange: #fd7e14;
  --bs-yellow: #ffc107;
  --bs-green: #198754;
  --bs-teal: #20c997;
  --bs-cyan: #0dcaf0;
  --bs-white: #fff;
  --bs-gray: #6c757d;
  --bs-gray-dark: #343a40;
  --bs-primary: #0d6efd;
  --bs-secondary: #6c757d;
  --bs-success: #198754;
  --bs-info: #0dcaf0;
  --bs-warning: #ffc107;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212529;
  --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",roboto,"Helvetica Neue",arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  --bs-font-monospace: sfmono-regular,menlo,monaco,consolas,"Liberation Mono","Courier New",monospace;
  --bs-gradient: linear-gradient(180deg, rgb(255 255 255 / 15%), rgb(255 255 255 / 0%));
}

body {
  font-size: var(--body-font-size-m);
  margin: 0;
  font-family: var(--body-font-family);
  line-height: 1.375;
  color: var(--text-color);
  background-color: var(--background-color);
  display: none;
}

html {
  scroll-behavior: smooth;
}

body.appear {
  display: unset;
}

header {
  height: var(--nav-height);
}

h1, h2, h3 {
  color: var(--heading-color);
  font-family: var(--heading-font-family);
  font-weight: 700;
  line-height: 1.5rem;
  margin-top: 0;
  margin-bottom: 1.5rem;
}

h1 { font-size: var(--heading-font-size-xxl) }
h2 { font-size: var(--heading-font-size-xl) }
h3 { font-size: var(--heading-font-size-l) }

.default-content-wrapper > :where(h1, h2, h3) {
  font-size: var(--heading-font-size-xxl);
  padding-top: 6.25rem;
  margin-bottom: 3rem;
}

p, dl, ol, ul, pre, blockquote {
  margin-top: 0;
  margin-bottom: 1rem;
  line-height: 1.375rem;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

code, samp {
  padding: .125em;
}

pre {
  overflow: scroll;
}

/* buttons */

a.button:any-link, button {
  font-family: var(--body-font-family);
  display: inline-block;
  box-sizing: border-box;
  text-decoration: none;
  border: 1px solid var(--link-color);
  padding: 9pt;
  text-align: center;
  cursor: pointer;
  color: var(--background-color);
  background-color: var(--link-color);
  border-radius: 2px;
}

a.button:hover, a.button:focus, button:hover, button:focus  {
  background-color: var(--link-hover-color);
  color: var(--link-color);
  cursor: pointer;
}

a.button.secondary, button.secondary {
  background-color: unset;
  border: 2px solid currentcolor;
  color: var(--text-color)
}


main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

@media (min-width: 600px) {
  main .section {
    padding: 0 .9375rem;
  }
}

@media (min-width: 900px) {
  .section > div {
    max-width: 1200px;
    margin: auto;
  }
}

@media (min-width: 1000px) {
  :root {
    --nav-height: 120px;
  }
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'] {
  display: none;
}

/* section highlights */
main .section.highlight {
  background-color: var(--highlight-background-color);
  padding: 6.25rem .9375rem;
}

main .section.highlight .default-content-wrapper > :where(h1, h2, h3):first-child {
  padding-top: 0;
}

